tests/trybuild/duplicate_labels_choice.stderr
error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/trybuild/duplicate_labels_choice.rs:14:40
   |
14 | assert_unique_labels!(DuplicateLabels);
   |                                        ^ consider adding a `main` function to `$DIR/tests/trybuild/duplicate_labels_choice.rs`
